--- a/app/globals.css
+++ b/app/globals.css
@@ -1,6 +1,6 @@
 @import "tailwindcss";
 @plugin "@tailwindcss/typography";
-@source "../react_app/src/**/*.{js,jsx,ts,tsx}";
+@source "../../react_app/src/**/*.{js,jsx,ts,tsx}";
 
 :root {
   --background: #ffffff;
@@ -26,3 +26,128 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+/* Legacy navbar: align Tailwind v4 output with CRA/Tailwind v3 palette. */
+.legacy-navbar-theme nav {
+  color: rgb(15 23 42 / var(--tw-text-opacity, 1));
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
+  font-size: 14px;
+  line-height: 1.5;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+.legacy-navbar-theme nav.bg-gradient-to-r {
+  background-image: linear-gradient(to right, #e0e7ff, #e9d5ff, #fbcfe8);
+}
+
+.legacy-navbar-theme .text-purple-400 {
+  color: rgb(192 132 252 / var(--tw-text-opacity, 1));
+}
+
+.legacy-navbar-theme .border-pink-400 {
+  border-color: rgb(244 114 182 / var(--tw-border-opacity, 1));
+}
+
+.legacy-navbar-theme .bg-pink-100 {
+  background-color: rgb(252 231 243 / var(--tw-bg-opacity, 1));
+}
+
+.legacy-navbar-theme .bg-gray-100 {
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity, 1));
+}
+
+.legacy-navbar-theme .border-gray-300 {
+  border-color: rgb(209 213 219 / var(--tw-border-opacity, 1));
+}
+
+
+.legacy-navbar-theme nav.w-80 {
+  width: 280px;
+}
+
+.legacy-navbar-theme nav .px-4 {
+  padding-left: 14px;
+  padding-right: 14px;
+}
+
+.legacy-navbar-theme nav .py-4 {
+  padding-top: 14px;
+  padding-bottom: 14px;
+}
+
+.legacy-navbar-theme nav .mb-4 {
+  margin-bottom: 14px;
+}
+
+.legacy-navbar-theme nav .py-1\.5 {
+  padding-top: 5.25px;
+  padding-bottom: 5.25px;
+}
+
+.legacy-navbar-theme nav .px-3 {
+  padding-left: 10.5px;
+  padding-right: 10.5px;
+}
+
+.legacy-navbar-theme nav .mr-2 {
+  margin-right: 7px;
+}
+
+.legacy-navbar-theme nav .ml-1 {
+  margin-left: 3.5px;
+}
+
+.legacy-navbar-theme nav .pt-2 {
+  padding-top: 7px;
+}
+
+.legacy-navbar-theme nav .px-1 {
+  padding-left: 3.5px;
+  padding-right: 3.5px;
+}
+
+.legacy-navbar-theme nav .h-5 {
+  height: 17.5px;
+}
+
+.legacy-navbar-theme nav .w-5 {
+  width: 17.5px;
+}
+
+.legacy-navbar-theme nav .h-4 {
+  height: 14px;
+}
+
+.legacy-navbar-theme nav .w-4 {
+  width: 14px;
+}
+
+.legacy-navbar-theme nav .text-\[20px\] {
+  font-size: 20px;
+}
+
+.legacy-navbar-theme nav .text-\[15px\] {
+  font-size: 15px;
+}
+
+.legacy-navbar-theme nav .text-sm {
+  font-size: 12.25px;
+}
+.legacy-navbar-theme .bg-opacity-50 {
+  --tw-bg-opacity: 0.5;
+}
+
+.legacy-navbar-theme .hover\:bg-opacity-75:hover {
+  --tw-bg-opacity: 0.75;
+}
+
+.legacy-navbar-theme button {
+  color: rgb(15 23 42 / var(--tw-text-opacity, 1));
+}
+
+.legacy-navbar-theme .underline {
+  text-decoration-line: none;
+}
+
